--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly chagnes from master branch
 -->
 <head>
-	<title>ASilly Changes on Master</title>
+	<title>Lots Of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,6 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler content -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
