--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Some silly chagnes from master branch
 -->
 <head>
-	<title>Lots Of Trouble</title>
+	<title>Lots Of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
